frontend/info-skjerm-2026/src/index.css
@import "tailwindcss";

:root {
  font-family: "Inter Variable", sans-serif;
}

@theme {
  --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
  --background-image-gradient-conic: conic-gradient(
    from 180deg at 50% 50%,
    var(--tw-gradient-stops)
  );
  --color-tqblue: #000240;
  --color-tqwhite: #e2e2e2;
  --color-background: #0d1117;

  --color-common: #e5e7eb;
  --color-uncommon: #1eff00;
  --color-rare: #2491ff;
  --color-epic: #a335ee;
  --color-legendary: #ff8000;
  --color-mythic: #ef4444;
}

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@utility text-balance {
  text-wrap: balance;
}

@layer utilities {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }

  /* Redundant */
  /* @media (prefers-color-scheme: dark) {
    :root {
      --foreground-rgb: 255, 255, 255;
      --background-start-rgb: 0, 0, 0;
      --background-end-rgb: 0, 0, 0;
    }
  } */

  body {
    color: rgb(var(--foreground-rgb));
    background: linear-gradient(
        to bottom,
        transparent,
        rgb(var(--background-end-rgb))
      )
      rgb(var(--background-start-rgb));
  }
}

html {
  font-family: var(--font-inter);
}

h1 {
  font-family: var(--font-julius-sans-one);
  font-weight: bold;
}

#dice-canvas canvas {
  width: 100%;
  height: 100%;
}

@keyframes move-up-down {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-20px);
  }
}

@keyframes shadow-pulse {
  0% {
    text-shadow:
      0 0 2px rgba(255, 128, 0, 0.7),
      0 0 5px rgba(255, 128, 0, 0.5);
  }
  100% {
    text-shadow:
      0 0 5px rgba(255, 128, 0, 0.8),
      0 0 10px rgba(255, 128, 0, 0.6);
  }
}

@keyframes shine {
  0% {
    background-position: 100% 0;
  }

  80% {
    background-position: -100% 0;
  }

  90% {
    background-position: -100% 0;
  }
  100% {
    background-position: -100% 0;
  }
}

@layer utilities {
  .animate-move-up-down-0 {
    animation: move-up-down 3.5s ease-in-out infinite;
  }
  .animate-move-up-down-1 {
    animation: move-up-down 3s ease-in-out infinite;
  }
  .animate-move-up-down-2 {
    animation: move-up-down 4s ease-in-out infinite;
  }
  .animate-move-up-down-3 {
    animation: move-up-down 4.5s ease-in-out infinite;
  }

  .rarity {
    background: linear-gradient(
      120deg,
      rgba(255, 255, 255, 0) 30%,
      rgba(255, 255, 255, 1) 45%,
      rgba(255, 255, 255, 0) 50%
    );
    background-size: 200% 100%;
    -webkit-background-clip: text;
    background-clip: text;
    display: inline-block;
    animation: shine 7s ease-in-out infinite;
  }
}

